--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Jil" Version="2.15.4" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0-preview2-final" />
+    <PackageReference Include="Microsoft.AspNetCore.ResponseCompression" Version="2.1.0-preview2-final" />
   </ItemGroup>
 
   <ItemGroup>
